update /channels endpoint for returning the sync eta, backlog etc
